# supercompensation

./: .env.example  .gitignore  ACTIVITY_TYPES.md  CORRELATION_ANALYSIS.md  DEMO_COMPLETE.md  EXECUTION_RESULTS.md  FUTURE_IMPLEMENTATIONS.md  FUTURE_IMPLEMENTATIONS_PART2.md  GARMIN_SETUP.md  IMPLEMENTATION_SUMMARY.md  INSTALL_ML_ENHANCEMENTS.md  INTEGRATION_COMPLETE.md  Ihr angeforderter OMRON-Bericht vom 23 März 2025 bis zum 24 Sep. 2025.csv  Ihr angeforderter OMRON-Bericht vom 25 Aug. 2025 bis zum 24 Sep. 2025.csv  Ihr angeforderter OMRON-Bericht vom 29 Sep. 2025 bis zum 30 Sep. 2025.csv  Ihr angeforderter OMRON-Bericht vom 30 Aug. 2025 bis zum 29 Sep. 2025.csv  ML_ENHANCEMENTS_GUIDE.md  OPTION1_COMPLETE.md  README.md  RENPHO Health-Alex.csv  RENPHO Health-Alex2.csv  TESTING_CHECKLIST.md  USER_FRIENDLY_UPDATE.md  advanced_plan_performance_30day.html  build_program.txt  correlation_results.json  demo_export.json  final_clean_program.txt  fixed_program.txt  migrate_adaptive_models.py  migrate_db.py  pyproject.toml  requ.md  requirements-dev.txt  requirements-minimal.txt  requirements.txt  test_30day_planning.py  test_advanced_models.py  test_correlation_analysis.py
models/: performance_model.joblib
models/ml_enhanced/: anomaly_detector.pkl  lstm_trajectory.keras  lstm_trajectory.pkl  retraining_metadata.json
scripts/: validate_load_model.py
strava_supercompensation/: __init__.py  ai_coach.py  cli.py  config.py
strava_supercompensation/analysis/: __init__.py  (+22 more)
templates/: training_plan_visualization.html
tests/: test_banister_model.py  test_sports_metrics.py
(+15 files in other folders)
